2003-12-12  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-xpath-expression.h, cong-xpath-expression.c, Makefile.am

	New files

2003-12-11  Pav Lucistnik <pav@FreeBSD.org>

	* cong-primary-window.c

	Fixed C99ism build problem on gcc-2.95.4

	--- Version 0.7.7 --	

2003-12-09  Robert Varga <frozenfingers@xs4all.nl>

	* cong-menus.c, cong-primary-window.c, cong-primary-window.h
	
	Fix for bug 123065 (open using empty window instead of whole new window), cleanups

2003-12-01  Robert Varga <frozenfingers@xs4all.nl>
 
	* cong-vfs.c

 	Fixed loading from GnomeVFS with a relative path

2003-12-01  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, cong-node.c, cong-node.h

	Moved detection of unneccesary whitespace TEXT nodes into a new function; used it for handling cursor movement to skip these nodes

	* cong-editor-area-flow-holder-blocks.c, cong-editor-widget3.c

	Fixes for bug #123367 by Anders Petersson <demitar@worldforge.org>

	* file.c

	Cleanups of source

2003-11-23  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-file-export.c, cong-file-import.c, cong-file-open.c, cong-file-print.c, cong-file-save.c, file.c, global.h, plugin-save-dispspec.c

	New file-selection interface, to begin transition to GtkFileChooser
	
	* cong-file-selection.h, Makefile.am

	New file

2003-11-19  Duraid Madina

	* global.h
	portability bugfix
	
2003-11-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* tree.c

	Fix for bug #127026 (crash when using cut from popup menu)

2003-11-12  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-element.c, gxx-object-from-xml-tree.h

	Support missing xml:lang attribute for element names and descriptions
	
	* cong-document.c, cong-document.h

	Added cong_document_node_can_be_deleted test function

2003-11-11  David Malcolm <david@davemalcolm.demon.co.uk>
